--- a/weapp/apps/customerized_apps/shengjing/templates/webapp/study_plan.html
+++ b/weapp/apps/customerized_apps/shengjing/templates/webapp/study_plan.html
@@ -211,9 +211,9 @@
 				
 			</div>
 			<div class="wui-tabs">
-					<a href="javascript:void(0)" status="0" class="active">未开课</a>
-					<a href="javascript:void(0)" status="1">已开课</a>
-					<a href="javascript:void(0)" status="2">全部</a>
+					<a href="javascript:void(0)" status="0" class="active">未开课1</a>
+					<a href="javascript:void(0)" status="1">已开课2</a>
+					<a href="javascript:void(0)" status="2">全部3</a>
 			</div>
 		</div>   
 		<div class="wui-swiper-wrapper">
