--- a/weapp/member/templates/member/editor/member_grades.html
+++ b/weapp/member/templates/member/editor/member_grades.html
@@ -30,8 +30,14 @@
 		<p class="xui-rightPanelTitle mb10">等级设置</p>
 		<form class="xui-mall-addProductForm pl20 pr20 clearfix pr" method="post" id="editForm" >
             <label for="">自动升级条件：</label>
-            <input type="radio" name="auto" id="one" class="vm m0" checked><label for="one" class="xui-selectAll mr30">&nbsp;&nbsp;满足一个条件即可</label>
-            <input type="radio" name="auto" id="all" class="vm m0"><label for="all" class="xui-selectAll">&nbsp;&nbsp;必须满足全部条件</label>
+            {% if is_all_conditions %}
+                <input type="radio" name="is_all_conditions" value="0" id="one" class="vm m0" ><label for="one" class="xui-selectAll mr30">&nbsp;&nbsp;满足一个条件即可</label>
+                <input type="radio" name="is_all_conditions" value="1" id="all" class="vm m0" checked><label for="all" class="xui-selectAll">&nbsp;&nbsp;必须满足全部条件</label>
+            {% else %}
+                <input type="radio" name="is_all_conditions" value="0" id="one" class="vm m0" checked><label for="one" class="xui-selectAll mr30">&nbsp;&nbsp;满足一个条件即可</label>
+                <input type="radio" name="is_all_conditions" value="1" id="all" class="vm m0"><label for="all" class="xui-selectAll">&nbsp;&nbsp;必须满足全部条件</label>
+            {% endif %}
+
             <a class="fr xa-tips" href="javascript:void(0);">操作说明</a>
             <ul class="xui-tips hidden xa-tipInfo">
                 <li><span>1.</span>不启用自动升级：该等级下的会员不会自动升级为其他等级的会员，需手动调整,但可享受设置的购物折扣。</li>
@@ -56,7 +62,7 @@
 					{% for grade in member_grades %}
 					<tr data-id="{{ grade.id }}" class="domain_data">
 						<td class="td-name" width="150">
-							<input data-validate="required-none::不能为空"  type="text" class="form-control  xa-grade-name xui-grade"  placeholder="" value="{{ grade.name }}" maxlength="100"/>
+							<input data-validate="require-notempty"  type="text" class="form-control  xa-grade-name xui-grade"  placeholder="" value="{{ grade.name }}" maxlength="100"/>
                             <div class="errorHint" ></div>
 						</td>
 
@@ -84,30 +90,30 @@
                                 <div class="xa-requirement-able" data-id="{{ grade.id }}" >
                                     <div><span class="xui-td-span">交易金额￥：</span><input data-validate="require-price" type="text" class="form-control xui-input xa-money" placeholder="" value="{{ grade.pay_money }}" maxlength="100"/><div class="errorHint" data-error-hint="请输入数字"></div></div>
                                     <div><span class="xui-td-span">购买次数：</span><input data-validate="require-nonnegative" type="text" class="form-control xui-input xa-paytimes"  id="grade_paytimes_term_{{grade.id}}" name="grade_paytimes_term_{{grade.id}}" placeholder="" value="{{ grade.pay_times }}" maxlength="100"/><div class="errorHint" data-error-hint="请输入数字"></div></div>
-                                    <div><span class="xui-td-span">活动积分：</span><input data-validate="require-nonnegative" type="text" class="form-control xui-input xa-bound" placeholder="" value="{{ grade.upgrade_lower_bound }}" maxlength="100"/><div class="errorHint" data-error-hint="请输入正整数"></div></div>
+                                    <div><span class="xui-td-span">经验值：</span><input data-validate="require-nonnegative" type="text" class="form-control xui-input xa-bound" placeholder="" value="{{ grade.upgrade_lower_bound }}" maxlength="100"/><div class="errorHint" data-error-hint="请输入正整数"></div></div>
 							    </div >
                                 <div class="xa-requirement-disabled" data-id="{{ grade.id }}" style="display: none">
                                     <div><span class="xui-td-span">交易金额￥：</span><input disabled type="text"  class="form-control xui-input"/></div>
                                     <div><span class="xui-td-span">购买次数：</span><input disabled type="text"  class="form-control xui-input"/></div>
-                                    <div><span class="xui-td-span">活动积分：</span><input disabled type="text"  class="form-control xui-input"/></div>
+                                    <div><span class="xui-td-span">经验值：</span><input disabled type="text"  class="form-control xui-input"/></div>
                                 </div>
                                 {% else %}
                                 <div class="xa-requirement-able" data-id="{{ grade.id }}" style="display: none">
                                     <div><span class="xui-td-span">交易金额￥：</span><input data-validate="require-price" type="text" class="form-control xui-input xa-money" placeholder="" value="{{ grade.pay_money }}" maxlength="100"/><div class="errorHint" data-error-hint="请输入数字"></div></div>
                                     <div><span class="xui-td-span">购买次数：</span><input data-validate="require-nonnegative" type="text" class="form-control xui-input xa-paytimes"  id="grade_paytimes_term_{{grade.id}}" name="grade_paytimes_term_{{grade.id}}" placeholder="" value="{{ grade.pay_times }}" maxlength="100"/><div class="errorHint" data-error-hint="请输入数字"></div></div>
-                                    <div><span class="xui-td-span">活动积分：</span><input data-validate="require-nonnegative" type="text" class="form-control xui-input xa-bound" placeholder="" value="{{ grade.upgrade_lower_bound }}" maxlength="100"/><div class="errorHint" data-error-hint="请输入正整数"></div></div>
+                                    <div><span class="xui-td-span">经验值：</span><input data-validate="require-nonnegative" type="text" class="form-control xui-input xa-bound" placeholder="" value="{{ grade.upgrade_lower_bound }}" maxlength="100"/><div class="errorHint" data-error-hint="请输入正整数"></div></div>
 							    </div >
                                 <div class="xa-requirement-disabled" data-id="{{ grade.id }}">
                                     <div><span class="xui-td-span">交易金额￥：</span><input disabled type="text"  class="form-control xui-input"/></div>
                                     <div><span class="xui-td-span">购买次数：</span><input disabled type="text"  class="form-control xui-input"/></div>
-                                    <div><span class="xui-td-span">活动积分：</span><input disabled type="text"  class="form-control xui-input"/></div>
+                                    <div><span class="xui-td-span">经验值：</span><input disabled type="text"  class="form-control xui-input"/></div>
                                 </div>
                                 {% endif %}
 							{% endif %}
 						</td>
 						<td class="td-discount tc">
-                            <input type="text" class="form-control xui-input xa-discount" placeholder="" value="{{ grade.shop_discount }}" maxlength="100"/>
-                            <div class="errorHint" data-error-hint="请输入数字"></div>
+                            <input data-validate="require-float-one" type="text" class="form-control xui-input xa-discount" placeholder="" value="{{ grade.shop_discount }}" maxlength="100"/>
+                            <div class="errorHint" data-error-hint="请输入1~10的1位小数"></div>
 						</td>
 						<td class="td-fouth">
                         {% if grade.is_default_grade %}
@@ -135,7 +141,6 @@
                     等级折扣必须主机递减或相同
                 </div>
 				<div class="xui-btn-group tc">
-{#					<input type="submit" class="btn btn-primary xa-submit" id="submitBtn" value="保存" />#}
                     <a href="javascript:void(0);" class="btn btn-primary xa-submit">保存</a>
 				</div>
 		</form>
@@ -156,12 +161,11 @@
         }
         $('.add_grades').click(function (event) {
             console.log($(".domain_data").last().attr('data-id'));
-            //var data_id = $(".domain_data").last().attr('data-id');
             data_id = parseInt(data_id) + 1;
             var new_data_id = parseInt(data_id) + 1;
             var templ = '<tr data-id="' + new_data_id + '" class="domain_data">'
                             +'<td class="td-name" width="150">'
-                                +'<input data-validate="required-none::不能为空"  type="text" class="form-control  xa-grade-name xui-grade" id="grade_id_' + new_data_id + '" name="grade_id_' + new_data_id + '" value="{{ grade.name }}" maxlength="100"/>'
+                                +'<input data-validate="require-notempty"  type="text" class="form-control  xa-grade-name xui-grade" id="grade_id_' + new_data_id + '" name="grade_id_' + new_data_id + '" value="{{ grade.name }}" maxlength="100"/>'
                                 +'<div class="errorHint">'
                             +'</td>'
                             +'<td>'
@@ -174,17 +178,17 @@
                                 +'<div class="xa-requirement-able" data-id="' + new_data_id + '" style="display: none">'
                                     +'<div><span class="xui-td-span">交易金额￥：</span><input data-validate="require-price" type="text" class="form-control xui-input xa-money" placeholder="" value="{{ grade.pay_money }}" maxlength="100"/><div class="errorHint" data-error-hint="请输入数字"></div></div>'
                                     +'<div><span class="xui-td-span">购买次数：</span><input data-validate="require-nonnegative" type="text" class="form-control xui-input xa-paytimes"  id="grade_paytimes_term_' + new_data_id + '" name="grade_paytimes_term_' + new_data_id + '" placeholder="" value="{{ grade.pay_times }}" maxlength="100"/><div class="errorHint" data-error-hint="请输入数字"></div></div>'
-                                    +'<div><span class="xui-td-span">活动积分：</span><input data-validate="require-nonnegative" type="text" class="form-control xui-input xa-bound" placeholder="" value="{{ grade.upgrade_lower_bound }}" maxlength="100"/><div class="errorHint" data-error-hint="请输入正整数"></div></div>'
+                                    +'<div><span class="xui-td-span">经验值：</span><input data-validate="require-nonnegative" type="text" class="form-control xui-input xa-bound" placeholder="" value="{{ grade.upgrade_lower_bound }}" maxlength="100"/><div class="errorHint" data-error-hint="请输入正整数"></div></div>'
                                 +'</div>'
                                 +'<div class="xa-requirement-disabled" data-id="' + new_data_id + '">'
                                     +'<div><span class="xui-td-span">交易金额￥：</span><input disabled type="text"  class="form-control xui-input"/></div>'
                                     +'<div><span class="xui-td-span">购买次数：</span><input disabled type="text"  class="form-control xui-input"/></div>'
-                                    +'<div><span class="xui-td-span">活动积分：</span><input disabled type="text"  class="form-control xui-input"/></div>'
+                                    +'<div><span class="xui-td-span">经验值：</span><input disabled type="text"  class="form-control xui-input"/></div>'
                                 +'</div>'
                             +'</td>'
                             +'<td class="td-discount tc">'
-                                +'<input type="text" class="form-control xui-input xa-discount" placeholder="" value="{{ grade.shop_discount }}" maxlength="100"/>'
-                                +'<div class="errorHint" data-error-hint="请输入数字"></div>'
+                                +'<input data-validate="require-float-one" type="text" class="form-control xui-input xa-discount" placeholder="" value="{{ grade.shop_discount }}" maxlength="100"/>'
+                                +'<div class="errorHint" data-error-hint="请输入1~10的1位小数"></div>'
                             +'</td>'
                             +'<td class="td-fouth">'
                                 +'<a href="javascript:void(0);" class="delete_tr">删除</a>'
@@ -230,8 +234,6 @@
                 value = 1;
                 $('div[data-id=' + id + '].xa-requirement-able').show();
                 $('div[data-id=' + id + '].xa-requirement-disabled').hide();
-{#                $el.find('.xa-requirement-able').show();#}
-{#                $el.find('.xa-requirement-disabled').hide();#}
             }
             $el.attr("value",value);
         });
@@ -241,9 +243,6 @@
         $('.xa-tips').mouseleave(function(event) {
             $('.xa-tipInfo').addClass('hidden');
         });
-
-
-
 
         $('body').delegate('.xa-submit', 'click', function (event) {
             if (!W.validate()) {
@@ -334,12 +333,9 @@
                 grades.push({ 'id': id,  'name': name, 'is_auto_upgrade':is_auto_upgrade, 'money':money, 'paytimes':paytimes, 'bound':bound, 'discount':discount});
             });
 
-            console.log("xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx");
-            console.log(grades);
-
             if(flag){
                 xlog(JSON.stringify(grades));
-                var is_all_conditions = '1'
+                var is_all_conditions = $('input[name="is_all_conditions"]:checked').val();
                 W.getApi().call({
                     method: 'post',
                     app: 'mall2',
@@ -354,54 +350,11 @@
                         W.showHint('error', '保存失败');
                         }
                 })
-
             }
             else{
                 $(".xa-error-hint").show();
-{#                W.showHint('error', '保存失败');#}
             }
-
-
-
         });
-
-            {#        #}
-{#            		$('#editForm').submit(function() {#}
-{#            			if (!W.validate()) {#}
-{#            				return false;#}
-{#            			}#}
-{#            			var $tagName = $('input.xa-grade-name');#}
-{#            			var flag = true;#}
-{#            			$tagName.each(function(i, value) {#}
-{#            				console.log(value)#}
-            {#				var tag_name = value.value;#}
-            {#				console.log(tag_name)#}
-            {#				if (!$.trim(tag_name)) {#}
-            {#					flag = false;#}
-            {#					return false;#}
-            {#				}#}
-            {#			});#}
-            {#			if (!flag) {#}
-            {#				W.showHint('error', '请输入会员等级名称');#}
-            {#				return false;#}
-            {#			}#}
-            {#			W.showHint('success', '保存成功');#}
-            {#		});#}
-
-
-
-
-
-            {#        for(var i=0;i<tr_list.length;i++)#}
-            {#        {#}
-            {#            console.log("zzzzzz")#}
-            {#            console.log(i.attr("data-id"));#}
-            {#            console.log(tr_list.eq(i).attr("data-id"))#}
-            {#            console.log(tr_list.eq(i))#}
-            {#        }#}
-
-
-
     });
 </script>
 {% endblock %}
