--- a/weapp/static_v2/css/member.css
+++ b/weapp/static_v2/css/member.css
@@ -150,11 +150,7 @@
 	display: inline-block;
 }
 .xui-members-page .errorHint{
-	
-	width: 80px;
-	margin-left: 95px;
-	position: relative;
-	top:-3px;
+	text-align: center;
 }
 
 /*
